# enormous-cloud

./: .gitignore  Dockerfile  README.md
client/: Cargo.toml  Trunk.toml  index.html
client/src/: lib.rs  loading.rs  proto.rs  style.css
client/src/assets/: style.css
server/: Cargo.toml
server/db/: enormous.sql
server/src/: args.rs  chainstate.rs  db.rs  homepage.rs  inject.rs  main.rs
