[package]
name = "enormouscloud"
version = "0.1.0"
authors = ["EnormousCloud <enormous@webcerebrium.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.1", features = [ "postgres", "runtime-async-std-rustls", "bigdecimal" ] }
async-std = { version = "1.6", features = [ "attributes" ] }
structopt = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
sauron = { git = "https://github.com/ivanceras/sauron", branch = "master" }
anyhow = { version = "1.0" }
ureq = { version = "2.1", features = ["json", "charset"] }
base64 = { version = "0.13" }
tide = { version = "0.16" }
regex = { version = "1.5" }
bigdecimal = { version = "0.2" }
cached = { version = "0.23" }
env_logger = { version = "0.8" }
log = { version = "0.4" }
client = { path = "../client" }
