[package]
name = "enormouscloud"
version = "0.1.0"
authors = ["EnormousCloud <enormous@webcerebrium.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.1", features = [ "postgres", "runtime-async-std-rustls", "bigdecimal" ] }
async-std = { version = "1.6", features = [ "attributes" ] }
structopt = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sauron = { git = "https://github.com/ivanceras/sauron", branch = "master" }
anyhow = { version = "1.0" }
ureq = { version = "2.1", features = ["json", "charset"] }
base64 = { version = "0.13" }
tide = { version = "0.16", default-features = false, features = ["h1-server"] }
bigdecimal = { version = "0.2" }
cached = { version = "0.23" }
client = { path = "../client" }
async-trait = { version = "0.1" }
tracing-subscriber = { version = "0.2" }
tracing = { version = "0.1" }
tracing-futures =  { version = "0.2" }